--- a/src/styles/piece.scss
+++ b/src/styles/piece.scss
@@ -1,6 +1,9 @@
 .piece {
-    height: 80px;
-    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 76px;
+    width: 76px;
 
     &:hover {
         cursor: grab;
